2012-04-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The "--split parts:" functionality was
	producing a small gap between the first part's last packet's
	timecode and the second part's first packet's timecode if two
	parts are written to the same file. Fixes ticket 742.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The "--split parts:" functionality was
	writing a superfluous and empty first part if the first range
	starts at 00:00:00. Fixes ticket 737.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, build system: Fixed building with wxWidgets 2.9.3.

2012-04-06  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.5.0.

	* Build system: Boost's "lexical_cast" and "type traits" libraries
	are now required.

	* mmg: new feature: Added GUI controls for mkvmerge's "file
	concatenation" feature as "additional file parts". The user can
	chose which individual files are treated as if they were a single
	huge source file.

	* mkvmerge: bug fix: The handling of the "do not read other files"
	options (e.g. "=file.vob" and "( file.vob )") was broken for MPEG
	program stream files.

2012-04-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed a wrong assertion about minimum MPEG
	1/2 video start code lengths. Fixes ticket 728.

2012-03-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: new feature: Added support for keeping only
	certain timecode ranges from the source files with a new format to
	"--split": "--split parts:...". Implements ticket #518.

2012-03-30  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: Added an option in the preferences dialog
	called "clear jobs from the job queue after they've been run". Can
	be set to "only if run was successfull", "even if there were
	warnings" and "even if there were errors". Defaults to off.

2012-03-29  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mkvextract, mmg: Re-write of the whole XML handling